# cockpit

./: .gitignore  99-platformio-stlink.rules  CLAUDE.md  DEBUG_PLAN_INTEGRATION_GAP.md  Makefile  README.md  debug_printf_test.c  enhanced_runtime_validator  linker_script.ld  openocd.cfg  platformio.ini  test_minimal.c  test_tier1_validation
blog/: 01-unveiling-cockpit-personal-quest.md  02-architecting-componentvm-heart.md  03-bridging-gap-simulation-to-silicon.md  04-beyond-the-bug-debugging.md  05-fortifying-cockpit-qa.md  06-orchestrating-complexity-project-management.md  07-journey-ahead-future-horizons.md
blog/mx_example/: test2.ioc
boards/: weact_g431cb.json
bootloader/include/: bootloader.h  bootloader_errors.h  bootloader_protocol.h  bootloader_resource_blocking.h  bootloader_state_blocking.h  bootloader_state_machine.h  bootloader_timeout.h  bootloader_uart_blocking.h  resource_manager.h  timeout_manager.h  transport_interface.h
bootloader/src/: bootloader.c  bootloader_errors.c  bootloader_protocol.c  bootloader_resource_blocking.c  bootloader_state_blocking.c  bootloader_state_machine.c  bootloader_timeout.c  bootloader_uart_blocking.c  resource_manager.c  timeout_manager.c  transport_interface.c
bootloader/transport/: uart_transport.c  uart_transport.h
canopy_gui/: CMakeLists.txt  README.md
canopy_gui/docs/: PHASE_CANOPY_1_IMPLEMENTATION_PLAN.md
canopy_gui/include/gui/: MainWindow.h
canopy_gui/include/hardware/: DeviceDiscovery.h
canopy_gui/include/protocol/: ProtocolClient.h
canopy_gui/shared_libs/frame_parser/: UniversalFrameParser.h
canopy_gui/src/main/: main.cpp
compiler/: CMakeLists.txt  debug_opcode_test.c  minimal_test_runner.c  runtime_validator  test_boolean.c  test_global_only.c
compiler/grammar/: ArduinoC.g4
compiler/shared/: vm_opcodes.h
compiler/src/: bytecode_visitor.cpp  bytecode_visitor.h  main.cpp  symbol_table.cpp  symbol_table.h
compiler/src/components/: CMakeLists.txt  component_test.cpp  component_vm.cpp  component_vm.h  execution_engine.cpp  execution_engine.h  io_controller.cpp  io_controller.h  memory_manager.cpp  memory_manager.h
compiler/tests/: Makefile  simple_function.c  test_array.c  test_basic_arithmetic.c  test_complex_control_flow.c  test_complex_functions.c  test_compound_assignment.c  test_functions.c  test_grammar_fix.c  test_integration_expressions.c  test_logical_operators.c  test_parser.cpp  test_simple_bitwise.c  test_single_bitwise.c
compiler/tests/validation_programs/: test_complex.c  test_simple.c
docs/: API_REFERENCE_COMPLETE.md  ARCHITECTURE_REVIEW_PHASE_3_7.md  CALL_INSTRUCTION_BUG_REPORT_AND_PC_MANAGEMENT_LEARNING.md  CHUNK_3_7_1_ARCHITECTURE_REFINEMENT.md  CHUNK_3_7_2_CPP_COMPONENT_FOUNDATION.md  COCKPITVM_INTEGRATION_ARCHITECTURE.md  CURRENT_STATUS_PHASE_4.md  DEFERRED_FEATURES.md  FEASIBILITY_STUDY_PHASE_4.md  GETTING_STARTED.md  INTEGRATION_GAP_RESOLUTION_REPORT.md  MEMORY_PROTECTION_TECHNICAL_REFERENCE.md  PHASE_1_IMPLEMENTATION.md  PHASE_3_6_QA_REPORT.md  PHASE_3_9_DEEP_DIVE_LEARNING_NOTES.md  PHASE_3_LEARNING_INSIGHTS.md  PHASE_3_QA_REPORT.md  PHASE_3_READINESS_ASSESSMENT.md  PHASE_4_HIGH_LEVEL_PLAN.md  PHASE_4_STEP_1_PLAN.md  RAII_EMBEDDED_DEEP_DIVE.md  README.md  RESEARCH_FINDINGS.md  TODO.md  VISION.md  chunk-1.1-project-structure.md  chunk-3.1-minimal-c-parser.md
docs/architecture/: 01-system-overview.md  02-memory-instruction-architecture.md  03-component-integration-flows.md  04-build-system-workflow.md  COMPONENTVM_PROGRAMMERS_MANUAL.md  PRODUCTION_ARCHITECTURE_REFACTORING_PLAN.md  README.md  STATIC_MEMORY_MANAGEMENT_ARCHITECTURE.md  UNIFIED_EXECUTION_ENGINE_ARCHITECTURE.md  VM_COCKPIT_FRESH_ARCHITECTURE.md  ZEPHYR_INSPIRED_3_LAYER_ARCHITECTURE.md  ZERO_COST_HARDWARE_ABSTRACTION_ARCHITECTURE.md
docs/bootloader/: BOOTLOADER_PROTOCOL_SPECIFICATION.md  BOOTLOADER_TEAM_IMPLEMENTATION_GUIDE.md  ENHANCED_BOOTLOADER_PROTOCOL_V2_SPECIFICATION.md
docs/debugging/: frame_parser_analysis_phase4_6_3.md  oracle_protocol_trace_data.md
docs/development/: COCKPITVM_TECHNICAL_REFERENCE.md  CONTEXT_OPTIMIZATION_SUMMARY.md  MEMORY_MANAGEMENT_CLEANUP_PLAN.md  (+27 more)
examples/: cpp_debug_session_example.cpp
include/: componentvm_debug_engine.h  memory_layout.h
lib/: legacy_execution_engine.cpp_archived
restructuring_backup/: platformio.ini
restructuring_backup/lib/vm_compiler/tools/: CMakeLists.txt  build_dev_tools.sh
scripts/: debug_serial_test.py  gdb_semihosting_session.sh  monitor_semihosting.py  qemu_runner.py  serial_debug_monitor.py  switch_bootloader.py  switch_target.py  test_bootloader_oracle.sh  test_chunk_4_1_1.sh  test_chunk_4_1_1_hardware_only.sh  test_chunk_4_1_1_simple.sh
src/: basic_hardware_test.c  bootloader_main.c  exception_stubs.cpp  main.c  main_legacy.c.backup  main_phase1_vm_test_concept.c.example  main_qemu_impl.h  memory_layout_test.c  simple_cpp_test.cpp  simple_led_test.c  simple_systick_test.c  syscalls.c  test_arduino_functions.c  test_arduino_functions.c.disabled  test_arduino_functions_migrated.c  test_arduino_gpio.c  test_arduino_gpio_legacy.c.disabled  test_button_input.c  test_button_input.c.disabled  test_button_validation.c  test_c_to_bytecode.c  test_c_to_bytecode.c.disabled  test_component_vm_placeholder.c  test_gpio_common.h  test_hal_stm32g4.c  test_handlerreturn_validation.c  test_integration_migrated.c  test_main.cpp  test_memory_protection.c  test_memory_protection.c.disabled  test_memory_protection_validation.c  test_memory_protection_validation.c.disabled  test_observer_pattern_basic.c  test_qemu_gpio.c  test_serial_verification.c  test_sos_demo.c  test_sos_demo.c.disabled  test_sos_demo_runner.c  test_sos_demo_runner.c.disabled  test_stubs.c  (+7 more)
tests/: analysis.json  debug_crc_check.py  debug_validation.py  debug_varint.py  protobuf_compatibility_test.py  protobuf_fix_test.py  requirements.txt  setup_test_environment.sh  test_authority_parsing.py  test_bytecode_compiler.py  test_dual_pass_validation.py  test_phase_4_9_2_integration.py  test_pyocd_semihosting_api.py  test_semihosting_direct.py
tools/: add_autoexec_header.py
(+428 files in other folders)
